// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux.Oidc Render <OidcBase3rdparty/> correctly 1`] = `
<DocumentFragment>
  <p>
    isEnabled
  </p>
</DocumentFragment>
`;

exports[`redux.Oidc Render <OidcBase3rdparty/> correctly when is enabled 1`] = `
<DocumentFragment>
  <p>
    Render Something
  </p>
</DocumentFragment>
`;
